# srpc

./: .gitignore  CMakeLists.txt  config.sh
net/: CMakeLists.txt
net/include/: acceptor.h  address.h  buffer.h  channel.h  connector.h  eventloop.h  file_descriptor.h  net.h  poll.h  socket.h  ssl_socket.h  tcp_client.h  tcp_connection.h  tcp_server.h  timer.h  timer_channel.h
net/src/: acceptor.cpp  address.cpp  buffer.cpp  channel.cpp  eventloop.cpp  file_descriptor.cpp  poll.cpp  socket.cpp  ssl_socket.cpp  tcp_connection.cpp  tcp_server.cpp  timer.cpp  timer_channel.cpp
net/test/: address_test.cpp  buffer_test.cpp  connector_test.cpp  evl_0.cpp  evl_1.cpp  evl_2.cpp  file_descriptor_test.cpp  gtest_test_env.cpp  socket_test.cpp  timer_multithread_test.cpp  timer_resolution_test.cpp  timer_test.cpp
proto/: CMakeLists.txt
proto/include/: http.h  package_extractor.h  parser.h  rpc.h
proto/include/rpc/: codeco.h  handler.h  message.h  message_register.h  method_handler.h  register.h  rpc.h  rpc_server.h  rpc_status.h  serialize.h  service.h  stub_generator.h
proto/json/: algorithm.json  greeter.json  sayhi.json
proto/src/: encoder.cpp  http.cpp  package_extractor.cpp  parser.cpp
proto/src/rpc/: codeco.cpp  message.cpp  rpc.cpp  rpc_server.cpp  serialize.cpp  service.cpp  stub_generator.cpp
proto/test/: algorithm.srpc.cpp  algorithm.srpc.h  gtest_main.cpp  helloworld.cpp  helloworld.h  http_test.cpp  parser_test.cpp  rpc_algorithm_test.cpp  rpc_algorithm_test_server.cpp  rpc_sayhi_test.cpp  rpc_sayhi_test_server.cpp  rpc_test.cpp  rpc_test_server.cpp  sayhi.srpc.cpp  sayhi.srpc.h  srpc_stub_generator.draft  stub_generator_test.cpp  wget.cpp
server/: CMakeLists.txt
server/https_ft/: https_ft.cpp
server/https_hello/: config.yaml  hello.gdbinit  hello.html  https_hello.cpp
server/https_hello/127.0.0.1/: cert.pem  private.pem  server.csr
server/https_mt_echo/: discard.cpp  echo.cpp
server/mt/: time.cpp
utils/: CMakeLists.txt
utils/include/: thread_pool.h
utils/test/: test_thread_pool.cpp
